src/codegen/tests/debug_tests/snapshots/rusty__codegen__tests__debug_tests__expression_debugging__aggregate_return_value_variable_in_function.snap
---
source: src/codegen/tests/debug_tests/expression_debugging.rs
expression: result
---
; ModuleID = '<internal>'
source_filename = "<internal>"
target datalayout = "[filtered]"
target triple = "[filtered]"

@utf08_literal_0 = private unnamed_addr constant [6 x i8] c"hello\00"

define void @myFunc(ptr %0) !dbg !4 {
entry:
  %myFunc = alloca ptr, align [filtered]
    #dbg_declare(ptr %myFunc, !15, !DIExpression(), !16)
  store ptr %0, ptr %myFunc, align [filtered]
  %deref = load ptr, ptr %myFunc, align [filtered], !dbg !17
  call void @llvm.memcpy.p0.p0.i32(ptr align [filtered] %deref, ptr align [filtered] @utf08_literal_0, i32 6, i1 false), !dbg !18
  ret void, !dbg !19
}

; Function Attrs: nocallback nofree nounwind willreturn memory(argmem: readwrite)
declare void @llvm.memcpy.p0.p0.i32(ptr noalias writeonly captures(none), ptr noalias readonly captures(none), i32, i1 immarg) #0

attributes #0 = { nocallback nofree nounwind willreturn memory(argmem: readwrite) }

!llvm.module.flags = !{!0, !1}
!llvm.dbg.cu = !{!2}

!0 = !{i32 2, !"Dwarf Version", i32 5}
!1 = !{i32 2, !"Debug Info Version", i32 3}
!2 = distinct !DICompileUnit(language: DW_LANG_C, file: !3, producer: "RuSTy Structured text Compiler", isOptimized: false, runtimeVersion: 0, emissionKind: FullDebug, splitDebugInlining: false)
!3 = !DIFile(filename: "<internal>", directory: "")
!4 = distinct !DISubprogram(name: "myFunc", linkageName: "myFunc", scope: !3, file: !3, line: 2, type: !5, scopeLine: 3, flags: DIFlagPublic, spFlags: DISPFlagDefinition, unit: !2, retainedNodes: !14, keyInstructions: true)
!5 = !DISubroutineType(flags: DIFlagPublic, types: !6)
!6 = !{null, !7}
!7 = !DIDerivedType(tag: DW_TAG_typedef, name: "__AUTO_DEREF____auto_pointer_to_STRING", scope: !3, file: !3, baseType: !8, align [filtered])
!8 = !DIDerivedType(tag: DW_TAG_pointer_type, name: "__auto_pointer_to_STRING", baseType: !9, size: 64, align [filtered], dwarfAddressSpace: 1)
!9 = !DIDerivedType(tag: DW_TAG_typedef, name: "__STRING__81", scope: !3, file: !3, baseType: !10, align [filtered])
!10 = !DICompositeType(tag: DW_TAG_array_type, baseType: !11, size: 648, align [filtered], elements: !12)
!11 = !DIBasicType(name: "CHAR", size: 8, encoding: DW_ATE_UTF, flags: DIFlagPublic)
!12 = !{!13}
!13 = !DISubrange(count: 81, lowerBound: 0)
!14 = !{}
!15 = !DILocalVariable(name: "myFunc", scope: !4, file: !3, line: 2, type: !7)
!16 = !DILocation(line: 2, column: 17, scope: !4)
!17 = !DILocation(line: 3, column: 12, scope: !4)
!18 = !DILocation(line: 3, column: 12, scope: !4, atomGroup: 1, atomRank: 1)
!19 = !DILocation(line: 4, column: 8, scope: !4, atomGroup: 2, atomRank: 1)
