src/codegen/tests/debug_tests/snapshots/rusty__codegen__tests__debug_tests__expression_debugging__array_size_correctly_set_in_dwarf_info.snap
---
source: src/codegen/tests/debug_tests/expression_debugging.rs
expression: result
---
; ModuleID = '<internal>'
source_filename = "<internal>"
target datalayout = "[filtered]"
target triple = "[filtered]"

define i32 @foo() !dbg !4 {
entry:
  %foo = alloca i32, align [filtered]
  %a = alloca [64 x i32], align [filtered]
    #dbg_declare(ptr %a, !8, !DIExpression(), !13)
  call void @llvm.memset.p0.i64(ptr align [filtered] %a, i8 0, i64 ptrtoint (ptr getelementptr ([64 x i32], ptr null, i32 1) to i64), i1 false)
    #dbg_declare(ptr %foo, !14, !DIExpression(), !15)
  store i32 0, ptr %foo, align [filtered]
  %foo_ret = load i32, ptr %foo, align [filtered], !dbg !16
  ret i32 %foo_ret, !dbg !17
}

; Function Attrs: nocallback nofree nounwind willreturn memory(argmem: write)
declare void @llvm.memset.p0.i64(ptr writeonly captures(none), i8, i64, i1 immarg) #0

attributes #0 = { nocallback nofree nounwind willreturn memory(argmem: write) }

!llvm.module.flags = !{!0, !1}
!llvm.dbg.cu = !{!2}

!0 = !{i32 2, !"Dwarf Version", i32 5}
!1 = !{i32 2, !"Debug Info Version", i32 3}
!2 = distinct !DICompileUnit(language: DW_LANG_C, file: !3, producer: "RuSTy Structured text Compiler", isOptimized: false, runtimeVersion: 0, emissionKind: FullDebug, splitDebugInlining: false)
!3 = !DIFile(filename: "<internal>", directory: "")
!4 = distinct !DISubprogram(name: "foo", linkageName: "foo", scope: !3, file: !3, line: 2, type: !5, scopeLine: 6, flags: DIFlagPublic, spFlags: DISPFlagDefinition, unit: !2, retainedNodes: !7, keyInstructions: true)
!5 = !DISubroutineType(flags: DIFlagPublic, types: !6)
!6 = !{null}
!7 = !{}
!8 = !DILocalVariable(name: "a", scope: !4, file: !3, line: 4, type: !9, align [filtered])
!9 = !DICompositeType(tag: DW_TAG_array_type, baseType: !10, size: 2048, align [filtered], elements: !11)
!10 = !DIBasicType(name: "DINT", size: 32, encoding: DW_ATE_signed, flags: DIFlagPublic)
!11 = !{!12}
!12 = !DISubrange(count: 64, lowerBound: 1)
!13 = !DILocation(line: 4, column: 12, scope: !4)
!14 = !DILocalVariable(name: "foo", scope: !4, file: !3, line: 2, type: !10, align [filtered])
!15 = !DILocation(line: 2, column: 17, scope: !4)
!16 = !DILocation(line: 6, column: 8, scope: !4)
!17 = !DILocation(line: 6, column: 8, scope: !4, atomGroup: 1, atomRank: 1)
