src/codegen/tests/debug_tests/snapshots/rusty__codegen__tests__debug_tests__expression_debugging__for_conditions_location_marked.snap
---
source: src/codegen/tests/debug_tests/expression_debugging.rs
expression: result
---
; ModuleID = '<internal>'
source_filename = "<internal>"
target datalayout = "[filtered]"
target triple = "[filtered]"

define i32 @myFunc() !dbg !4 {
entry:
  %myFunc = alloca i32, align [filtered]
    #dbg_declare(ptr %myFunc, !8, !DIExpression(), !10)
  store i32 0, ptr %myFunc, align [filtered]
  %__ran_once_0 = alloca i8, align [filtered]
  store i8 0, ptr %__ran_once_0, align [filtered], !dbg !11
  %__is_incrementing_0 = alloca i8, align [filtered]
  store i8 0, ptr %__is_incrementing_0, align [filtered], !dbg !11
  %__is_last_0 = alloca i8, align [filtered]
  store i8 0, ptr %__is_last_0, align [filtered], !dbg !11
  store i32 1, ptr %myFunc, align [filtered], !dbg !12
  store i8 1, ptr %__is_incrementing_0, align [filtered], !dbg !11
  br label %while_body, !dbg !13

while_body:                                       ; preds = %continue11, %entry
  %load___ran_once_0 = load i8, ptr %__ran_once_0, align [filtered], !dbg !11
  %0 = icmp ne i8 %load___ran_once_0, 0, !dbg !11
  br i1 %0, label %condition_body, label %continue1, !dbg !11

continue:                                         ; preds = %condition_body22, %condition_body17, %condition_body9
  %myFunc_ret = load i32, ptr %myFunc, align [filtered], !dbg !14
  ret i32 %myFunc_ret, !dbg !14

condition_body:                                   ; preds = %while_body
  %load___is_incrementing_0 = load i8, ptr %__is_incrementing_0, align [filtered], !dbg !11
  %1 = icmp ne i8 %load___is_incrementing_0, 0, !dbg !11
  br i1 %1, label %condition_body3, label %else, !dbg !11

continue1:                                        ; preds = %continue8, %while_body
  store i8 1, ptr %__ran_once_0, align [filtered], !dbg !11
  %load___is_incrementing_012 = load i8, ptr %__is_incrementing_0, align [filtered], !dbg !11
  %2 = icmp ne i8 %load___is_incrementing_012, 0, !dbg !11
  br i1 %2, label %condition_body13, label %else10, !dbg !11

condition_body3:                                  ; preds = %condition_body
  %load_myFunc = load i32, ptr %myFunc, align [filtered], !dbg !11
  %tmpVar = icmp sge i32 %load_myFunc, 20, !dbg !11
  %3 = zext i1 %tmpVar to i8, !dbg !11
  %4 = icmp ne i8 %3, 0, !dbg !11
  %5 = and i1 %4, true, !dbg !11
  %6 = zext i1 %5 to i8, !dbg !11
  store i8 %6, ptr %__is_last_0, align [filtered], !dbg !11
  br label %continue2, !dbg !11

else:                                             ; preds = %condition_body
  %load_myFunc4 = load i32, ptr %myFunc, align [filtered], !dbg !11
  %tmpVar5 = icmp slt i32 %load_myFunc4, 18, !dbg !11
  %7 = zext i1 %tmpVar5 to i8, !dbg !11
  store i8 %7, ptr %__is_last_0, align [filtered], !dbg !11
  br label %continue2, !dbg !11

continue2:                                        ; preds = %else, %condition_body3
  %load_myFunc6 = load i32, ptr %myFunc, align [filtered], !dbg !12
  %tmpVar7 = add i32 %load_myFunc6, 2, !dbg !12
  store i32 %tmpVar7, ptr %myFunc, align [filtered], !dbg !12
  %load___is_last_0 = load i8, ptr %__is_last_0, align [filtered], !dbg !11
  %8 = icmp ne i8 %load___is_last_0, 0, !dbg !11
  br i1 %8, label %condition_body9, label %continue8, !dbg !11

condition_body9:                                  ; preds = %continue2
  br label %continue, !dbg !11

buffer_block:                                     ; No predecessors!
  br label %continue8, !dbg !11

continue8:                                        ; preds = %buffer_block, %continue2
  br label %continue1, !dbg !11

condition_body13:                                 ; preds = %continue1
  %load_myFunc15 = load i32, ptr %myFunc, align [filtered], !dbg !12
  %tmpVar16 = icmp sgt i32 %load_myFunc15, 20, !dbg !12
  %9 = zext i1 %tmpVar16 to i8, !dbg !12
  %10 = icmp ne i8 %9, 0, !dbg !12
  br i1 %10, label %condition_body17, label %continue14, !dbg !12

else10:                                           ; preds = %continue1
  %load_myFunc20 = load i32, ptr %myFunc, align [filtered], !dbg !12
  %tmpVar21 = icmp slt i32 %load_myFunc20, 20, !dbg !12
  %11 = zext i1 %tmpVar21 to i8, !dbg !12
  %12 = icmp ne i8 %11, 0, !dbg !12
  br i1 %12, label %condition_body22, label %continue19, !dbg !12

continue11:                                       ; preds = %continue19, %continue14
  store i32 1, ptr %myFunc, align [filtered], !dbg !15
  br label %while_body, !dbg !11

condition_body17:                                 ; preds = %condition_body13
  br label %continue, !dbg !11

buffer_block18:                                   ; No predecessors!
  br label %continue14, !dbg !11

continue14:                                       ; preds = %buffer_block18, %condition_body13
  br label %continue11, !dbg !11

condition_body22:                                 ; preds = %else10
  br label %continue, !dbg !11

buffer_block23:                                   ; No predecessors!
  br label %continue19, !dbg !11

continue19:                                       ; preds = %buffer_block23, %else10
  br label %continue11, !dbg !11
}

!llvm.module.flags = !{!0, !1}
!llvm.dbg.cu = !{!2}

!0 = !{i32 2, !"Dwarf Version", i32 5}
!1 = !{i32 2, !"Debug Info Version", i32 3}
!2 = distinct !DICompileUnit(language: DW_LANG_C, file: !3, producer: "RuSTy Structured text Compiler", isOptimized: false, runtimeVersion: 0, emissionKind: FullDebug, splitDebugInlining: false)
!3 = !DIFile(filename: "<internal>", directory: "")
!4 = distinct !DISubprogram(name: "myFunc", linkageName: "myFunc", scope: !3, file: !3, line: 2, type: !5, scopeLine: 3, flags: DIFlagPublic, spFlags: DISPFlagDefinition, unit: !2, retainedNodes: !7)
!5 = !DISubroutineType(flags: DIFlagPublic, types: !6)
!6 = !{null}
!7 = !{}
!8 = !DILocalVariable(name: "myFunc", scope: !4, file: !3, line: 2, type: !9, align [filtered])
!9 = !DIBasicType(name: "DINT", size: 32, encoding: DW_ATE_signed, flags: DIFlagPublic)
!10 = !DILocation(line: 2, column: 17, scope: !4)
!11 = !DILocation(line: 0, scope: !4)
!12 = !DILocation(line: 3, column: 16, scope: !4)
!13 = !DILocation(line: 3, column: 12, scope: !4)
!14 = !DILocation(line: 6, column: 8, scope: !4)
!15 = !DILocation(line: 4, column: 16, scope: !4)
