src/codegen/tests/debug_tests/snapshots/rusty__codegen__tests__debug_tests__expression_debugging__implementation_added_as_subroutine.snap
---
source: src/codegen/tests/debug_tests/expression_debugging.rs
expression: result
---
; ModuleID = '<internal>'
source_filename = "<internal>"
target datalayout = "[filtered]"
target triple = "[filtered]"

%myPrg = type {}

@myPrg_instance = global %myPrg zeroinitializer, !dbg !0

define i32 @myFunc() !dbg !9 {
entry:
  %myFunc = alloca i32, align [filtered]
    #dbg_declare(ptr %myFunc, !12, !DIExpression(), !14)
  store i32 0, ptr %myFunc, align [filtered]
  %myFunc_ret = load i32, ptr %myFunc, align [filtered], !dbg !15
  ret i32 %myFunc_ret, !dbg !16
}

define void @myPrg(ptr %0) !dbg !17 {
entry:
    #dbg_declare(ptr %0, !20, !DIExpression(), !21)
  ret void, !dbg !22
}

define void @myFb(ptr %0) !dbg !23 {
entry:
    #dbg_declare(ptr %0, !27, !DIExpression(), !28)
  %this = alloca ptr, align [filtered]
  store ptr %0, ptr %this, align [filtered]
  ret void, !dbg !29
}

!llvm.module.flags = !{!5, !6}
!llvm.dbg.cu = !{!7}

!0 = !DIGlobalVariableExpression(var: !1, expr: !DIExpression())
!1 = distinct !DIGlobalVariable(name: "myPrg", scope: !2, file: !2, line: 4, type: !3, isLocal: false, isDefinition: true)
!2 = !DIFile(filename: "<internal>", directory: "")
!3 = !DICompositeType(tag: DW_TAG_structure_type, name: "myPrg", scope: !2, file: !2, line: 4, align [filtered], flags: DIFlagPublic, elements: !4, identifier: "myPrg")
!4 = !{}
!5 = !{i32 2, !"Dwarf Version", i32 5}
!6 = !{i32 2, !"Debug Info Version", i32 3}
!7 = distinct !DICompileUnit(language: DW_LANG_C, file: !2, producer: "RuSTy Structured text Compiler", isOptimized: false, runtimeVersion: 0, emissionKind: FullDebug, globals: !8, splitDebugInlining: false)
!8 = !{!0}
!9 = distinct !DISubprogram(name: "myFunc", linkageName: "myFunc", scope: !2, file: !2, line: 2, type: !10, scopeLine: 3, flags: DIFlagPublic, spFlags: DISPFlagDefinition, unit: !7, retainedNodes: !4, keyInstructions: true)
!10 = !DISubroutineType(flags: DIFlagPublic, types: !11)
!11 = !{null}
!12 = !DILocalVariable(name: "myFunc", scope: !9, file: !2, line: 2, type: !13, align [filtered])
!13 = !DIBasicType(name: "DINT", size: 32, encoding: DW_ATE_signed, flags: DIFlagPublic)
!14 = !DILocation(line: 2, column: 17, scope: !9)
!15 = !DILocation(line: 3, column: 8, scope: !9)
!16 = !DILocation(line: 3, column: 8, scope: !9, atomGroup: 1, atomRank: 1)
!17 = distinct !DISubprogram(name: "myPrg", linkageName: "myPrg", scope: !2, file: !2, line: 4, type: !18, scopeLine: 5, flags: DIFlagPublic, spFlags: DISPFlagDefinition, unit: !7, retainedNodes: !4, keyInstructions: true)
!18 = !DISubroutineType(flags: DIFlagPublic, types: !19)
!19 = !{null, !3}
!20 = !DILocalVariable(name: "myPrg", scope: !17, file: !2, line: 5, type: !3)
!21 = !DILocation(line: 5, column: 8, scope: !17)
!22 = !DILocation(line: 5, column: 8, scope: !17, atomGroup: 1, atomRank: 1)
!23 = distinct !DISubprogram(name: "myFb", linkageName: "myFb", scope: !2, file: !2, line: 6, type: !24, scopeLine: 7, flags: DIFlagPublic, spFlags: DISPFlagDefinition, unit: !7, retainedNodes: !4, keyInstructions: true)
!24 = !DISubroutineType(flags: DIFlagPublic, types: !25)
!25 = !{null, !26}
!26 = !DICompositeType(tag: DW_TAG_structure_type, name: "myFb", scope: !2, file: !2, line: 6, align [filtered], flags: DIFlagPublic, elements: !4, identifier: "myFb")
!27 = !DILocalVariable(name: "myFb", scope: !23, file: !2, line: 7, type: !26)
!28 = !DILocation(line: 7, column: 8, scope: !23)
!29 = !DILocation(line: 7, column: 8, scope: !23, atomGroup: 1, atomRank: 1)
