src/codegen/tests/debug_tests/snapshots/rusty__codegen__tests__debug_tests__expression_debugging__nested_function_calls_get_location.snap
---
source: src/codegen/tests/debug_tests/expression_debugging.rs
expression: result
---
; ModuleID = '<internal>'
source_filename = "<internal>"
target datalayout = "[filtered]"
target triple = "[filtered]"

define i32 @myFunc(i32 %0) !dbg !4 {
entry:
  %myFunc = alloca i32, align [filtered]
  %x = alloca i32, align [filtered]
    #dbg_declare(ptr %x, !9, !DIExpression(), !10)
  store i32 %0, ptr %x, align [filtered]
    #dbg_declare(ptr %myFunc, !11, !DIExpression(), !12)
  store i32 0, ptr %myFunc, align [filtered]
  %call = call i32 @myFunc(i32 1), !dbg !13
  %call1 = call i32 @myFunc(i32 %call), !dbg !14
  %myFunc_ret = load i32, ptr %myFunc, align [filtered], !dbg !15
  ret i32 %myFunc_ret, !dbg !16
}

!llvm.module.flags = !{!0, !1}
!llvm.dbg.cu = !{!2}

!0 = !{i32 2, !"Dwarf Version", i32 5}
!1 = !{i32 2, !"Debug Info Version", i32 3}
!2 = distinct !DICompileUnit(language: DW_LANG_C, file: !3, producer: "RuSTy Structured text Compiler", isOptimized: false, runtimeVersion: 0, emissionKind: FullDebug, splitDebugInlining: false)
!3 = !DIFile(filename: "<internal>", directory: "")
!4 = distinct !DISubprogram(name: "myFunc", linkageName: "myFunc", scope: !3, file: !3, line: 2, type: !5, scopeLine: 4, flags: DIFlagPublic, spFlags: DISPFlagDefinition, unit: !2, retainedNodes: !8, keyInstructions: true)
!5 = !DISubroutineType(flags: DIFlagPublic, types: !6)
!6 = !{null, !7}
!7 = !DIBasicType(name: "DINT", size: 32, encoding: DW_ATE_signed, flags: DIFlagPublic)
!8 = !{}
!9 = !DILocalVariable(name: "x", scope: !4, file: !3, line: 3, type: !7)
!10 = !DILocation(line: 3, column: 18, scope: !4)
!11 = !DILocalVariable(name: "myFunc", scope: !4, file: !3, line: 2, type: !7, align [filtered])
!12 = !DILocation(line: 2, column: 17, scope: !4)
!13 = !DILocation(line: 4, column: 19, scope: !4)
!14 = !DILocation(line: 4, column: 12, scope: !4, atomGroup: 1, atomRank: 1)
!15 = !DILocation(line: 5, column: 8, scope: !4)
!16 = !DILocation(line: 5, column: 8, scope: !4, atomGroup: 2, atomRank: 1)
