src/codegen/tests/debug_tests/snapshots/rusty__codegen__tests__debug_tests__expression_debugging__non_function_pous_have_struct_as_param.snap
---
source: src/codegen/tests/debug_tests/expression_debugging.rs
expression: result
---
; ModuleID = '<internal>'
source_filename = "<internal>"
target datalayout = "[filtered]"
target triple = "[filtered]"

%myProg = type { i32 }
%fb = type { i32 }

@myProg_instance = global %myProg zeroinitializer, !dbg !0

define void @myProg(ptr %0) !dbg !11 {
entry:
    #dbg_declare(ptr %0, !15, !DIExpression(), !16)
  %x = getelementptr inbounds nuw %myProg, ptr %0, i32 0, i32 0
  %load_x = load i32, ptr %x, align [filtered], !dbg !16
  %tmpVar = add i32 %load_x, 2, !dbg !16
  store volatile i32 %tmpVar, ptr %x, align [filtered], !dbg !17
  ret void, !dbg !18
}

define void @fb(ptr %0) !dbg !19 {
entry:
    #dbg_declare(ptr %0, !25, !DIExpression(), !26)
  %this = alloca ptr, align [filtered]
  store ptr %0, ptr %this, align [filtered]
  %x = getelementptr inbounds nuw %fb, ptr %0, i32 0, i32 0
  %load_x = load i32, ptr %x, align [filtered], !dbg !26
  %tmpVar = add i32 %load_x, 2, !dbg !26
  store volatile i32 %tmpVar, ptr %x, align [filtered], !dbg !27
  ret void, !dbg !28
}

!llvm.module.flags = !{!7, !8}
!llvm.dbg.cu = !{!9}

!0 = !DIGlobalVariableExpression(var: !1, expr: !DIExpression())
!1 = distinct !DIGlobalVariable(name: "myProg", scope: !2, file: !2, line: 2, type: !3, isLocal: false, isDefinition: true)
!2 = !DIFile(filename: "<internal>", directory: "")
!3 = !DICompositeType(tag: DW_TAG_structure_type, name: "myProg", scope: !2, file: !2, line: 2, size: 32, align [filtered], flags: DIFlagPublic, elements: !4, identifier: "myProg")
!4 = !{!5}
!5 = !DIDerivedType(tag: DW_TAG_member, name: "x", scope: !2, file: !2, line: 4, baseType: !6, size: 32, align [filtered], flags: DIFlagPublic)
!6 = !DIBasicType(name: "DINT", size: 32, encoding: DW_ATE_signed, flags: DIFlagPublic)
!7 = !{i32 2, !"Dwarf Version", i32 5}
!8 = !{i32 2, !"Debug Info Version", i32 3}
!9 = distinct !DICompileUnit(language: DW_LANG_C, file: !2, producer: "RuSTy Structured text Compiler", isOptimized: false, runtimeVersion: 0, emissionKind: FullDebug, globals: !10, splitDebugInlining: false)
!10 = !{!0}
!11 = distinct !DISubprogram(name: "myProg", linkageName: "myProg", scope: !2, file: !2, line: 2, type: !12, scopeLine: 6, flags: DIFlagPublic, spFlags: DISPFlagDefinition, unit: !9, retainedNodes: !14, keyInstructions: true)
!12 = !DISubroutineType(flags: DIFlagPublic, types: !13)
!13 = !{null, !3, !6}
!14 = !{}
!15 = !DILocalVariable(name: "myProg", scope: !11, file: !2, line: 6, type: !3)
!16 = !DILocation(line: 6, column: 12, scope: !11)
!17 = !DILocation(line: 6, column: 12, scope: !11, atomGroup: 1, atomRank: 1)
!18 = !DILocation(line: 7, column: 8, scope: !11, atomGroup: 2, atomRank: 1)
!19 = distinct !DISubprogram(name: "fb", linkageName: "fb", scope: !2, file: !2, line: 9, type: !20, scopeLine: 13, flags: DIFlagPublic, spFlags: DISPFlagDefinition, unit: !9, retainedNodes: !14, keyInstructions: true)
!20 = !DISubroutineType(flags: DIFlagPublic, types: !21)
!21 = !{null, !22, !6}
!22 = !DICompositeType(tag: DW_TAG_structure_type, name: "fb", scope: !2, file: !2, line: 9, size: 32, align [filtered], flags: DIFlagPublic, elements: !23, identifier: "fb")
!23 = !{!24}
!24 = !DIDerivedType(tag: DW_TAG_member, name: "x", scope: !2, file: !2, line: 11, baseType: !6, size: 32, align [filtered], flags: DIFlagPublic)
!25 = !DILocalVariable(name: "fb", scope: !19, file: !2, line: 13, type: !22)
!26 = !DILocation(line: 13, column: 12, scope: !19)
!27 = !DILocation(line: 13, column: 12, scope: !19, atomGroup: 1, atomRank: 1)
!28 = !DILocation(line: 14, column: 8, scope: !19, atomGroup: 2, atomRank: 1)
