src/codegen/tests/debug_tests/snapshots/rusty__codegen__tests__debug_tests__expression_debugging__var_and_vartemp_variables_in_pous_added_as_local.snap
---
source: src/codegen/tests/debug_tests/expression_debugging.rs
expression: result
---
; ModuleID = '<internal>'
source_filename = "<internal>"
target datalayout = "[filtered]"
target triple = "[filtered]"

%myPrg = type {}

@myPrg_instance = global %myPrg zeroinitializer, !dbg !0

define i32 @myFunc() !dbg !9 {
entry:
  %myFunc = alloca i32, align [filtered]
  %a = alloca i32, align [filtered]
  %b = alloca i32, align [filtered]
  %c = alloca i32, align [filtered]
    #dbg_declare(ptr %a, !12, !DIExpression(), !14)
  store i32 0, ptr %a, align [filtered]
    #dbg_declare(ptr %b, !15, !DIExpression(), !16)
  store i32 0, ptr %b, align [filtered]
    #dbg_declare(ptr %c, !17, !DIExpression(), !18)
  store i32 0, ptr %c, align [filtered]
    #dbg_declare(ptr %myFunc, !19, !DIExpression(), !20)
  store i32 0, ptr %myFunc, align [filtered]
  %myFunc_ret = load i32, ptr %myFunc, align [filtered], !dbg !21
  ret i32 %myFunc_ret, !dbg !22
}

define void @myPrg(ptr %0) !dbg !23 {
entry:
    #dbg_declare(ptr %0, !26, !DIExpression(), !27)
  %a = alloca i32, align [filtered]
  %b = alloca i32, align [filtered]
  %c = alloca i32, align [filtered]
    #dbg_declare(ptr %a, !28, !DIExpression(), !29)
  store i32 0, ptr %a, align [filtered]
    #dbg_declare(ptr %b, !30, !DIExpression(), !31)
  store i32 0, ptr %b, align [filtered]
    #dbg_declare(ptr %c, !32, !DIExpression(), !33)
  store i32 0, ptr %c, align [filtered]
  ret void, !dbg !34
}

define void @myFb(ptr %0) !dbg !35 {
entry:
    #dbg_declare(ptr %0, !39, !DIExpression(), !40)
  %this = alloca ptr, align [filtered]
  store ptr %0, ptr %this, align [filtered]
  %a = alloca i32, align [filtered]
  %b = alloca i32, align [filtered]
  %c = alloca i32, align [filtered]
    #dbg_declare(ptr %a, !41, !DIExpression(), !42)
  store i32 0, ptr %a, align [filtered]
    #dbg_declare(ptr %b, !43, !DIExpression(), !44)
  store i32 0, ptr %b, align [filtered]
    #dbg_declare(ptr %c, !45, !DIExpression(), !46)
  store i32 0, ptr %c, align [filtered]
  ret void, !dbg !47
}

!llvm.module.flags = !{!5, !6}
!llvm.dbg.cu = !{!7}

!0 = !DIGlobalVariableExpression(var: !1, expr: !DIExpression())
!1 = distinct !DIGlobalVariable(name: "myPrg", scope: !2, file: !2, line: 5, type: !3, isLocal: false, isDefinition: true)
!2 = !DIFile(filename: "<internal>", directory: "")
!3 = !DICompositeType(tag: DW_TAG_structure_type, name: "myPrg", scope: !2, file: !2, line: 5, align [filtered], flags: DIFlagPublic, elements: !4, identifier: "myPrg")
!4 = !{}
!5 = !{i32 2, !"Dwarf Version", i32 5}
!6 = !{i32 2, !"Debug Info Version", i32 3}
!7 = distinct !DICompileUnit(language: DW_LANG_C, file: !2, producer: "RuSTy Structured text Compiler", isOptimized: false, runtimeVersion: 0, emissionKind: FullDebug, globals: !8, splitDebugInlining: false)
!8 = !{!0}
!9 = distinct !DISubprogram(name: "myFunc", linkageName: "myFunc", scope: !2, file: !2, line: 2, type: !10, scopeLine: 4, flags: DIFlagPublic, spFlags: DISPFlagDefinition, unit: !7, retainedNodes: !4, keyInstructions: true)
!10 = !DISubroutineType(flags: DIFlagPublic, types: !11)
!11 = !{null}
!12 = !DILocalVariable(name: "a", scope: !9, file: !2, line: 3, type: !13, align [filtered])
!13 = !DIBasicType(name: "DINT", size: 32, encoding: DW_ATE_signed, flags: DIFlagPublic)
!14 = !DILocation(line: 3, column: 12, scope: !9)
!15 = !DILocalVariable(name: "b", scope: !9, file: !2, line: 3, type: !13, align [filtered])
!16 = !DILocation(line: 3, column: 14, scope: !9)
!17 = !DILocalVariable(name: "c", scope: !9, file: !2, line: 3, type: !13, align [filtered])
!18 = !DILocation(line: 3, column: 16, scope: !9)
!19 = !DILocalVariable(name: "myFunc", scope: !9, file: !2, line: 2, type: !13, align [filtered])
!20 = !DILocation(line: 2, column: 17, scope: !9)
!21 = !DILocation(line: 4, column: 8, scope: !9)
!22 = !DILocation(line: 4, column: 8, scope: !9, atomGroup: 1, atomRank: 1)
!23 = distinct !DISubprogram(name: "myPrg", linkageName: "myPrg", scope: !2, file: !2, line: 5, type: !24, scopeLine: 7, flags: DIFlagPublic, spFlags: DISPFlagDefinition, unit: !7, retainedNodes: !4, keyInstructions: true)
!24 = !DISubroutineType(flags: DIFlagPublic, types: !25)
!25 = !{null, !3}
!26 = !DILocalVariable(name: "myPrg", scope: !23, file: !2, line: 7, type: !3)
!27 = !DILocation(line: 7, column: 8, scope: !23)
!28 = !DILocalVariable(name: "a", scope: !23, file: !2, line: 6, type: !13, align [filtered])
!29 = !DILocation(line: 6, column: 17, scope: !23)
!30 = !DILocalVariable(name: "b", scope: !23, file: !2, line: 6, type: !13, align [filtered])
!31 = !DILocation(line: 6, column: 19, scope: !23)
!32 = !DILocalVariable(name: "c", scope: !23, file: !2, line: 6, type: !13, align [filtered])
!33 = !DILocation(line: 6, column: 21, scope: !23)
!34 = !DILocation(line: 7, column: 8, scope: !23, atomGroup: 1, atomRank: 1)
!35 = distinct !DISubprogram(name: "myFb", linkageName: "myFb", scope: !2, file: !2, line: 8, type: !36, scopeLine: 10, flags: DIFlagPublic, spFlags: DISPFlagDefinition, unit: !7, retainedNodes: !4, keyInstructions: true)
!36 = !DISubroutineType(flags: DIFlagPublic, types: !37)
!37 = !{null, !38}
!38 = !DICompositeType(tag: DW_TAG_structure_type, name: "myFb", scope: !2, file: !2, line: 8, align [filtered], flags: DIFlagPublic, elements: !4, identifier: "myFb")
!39 = !DILocalVariable(name: "myFb", scope: !35, file: !2, line: 10, type: !38)
!40 = !DILocation(line: 10, column: 8, scope: !35)
!41 = !DILocalVariable(name: "a", scope: !35, file: !2, line: 9, type: !13, align [filtered])
!42 = !DILocation(line: 9, column: 17, scope: !35)
!43 = !DILocalVariable(name: "b", scope: !35, file: !2, line: 9, type: !13, align [filtered])
!44 = !DILocation(line: 9, column: 19, scope: !35)
!45 = !DILocalVariable(name: "c", scope: !35, file: !2, line: 9, type: !13, align [filtered])
!46 = !DILocation(line: 9, column: 21, scope: !35)
!47 = !DILocation(line: 10, column: 8, scope: !35, atomGroup: 1, atomRank: 1)
